--- a/rocon_android_connector/AndroidManifest.xml
+++ b/rocon_android_connector/AndroidManifest.xml
@@ -3,6 +3,10 @@
       package="com.ros.turtlebot.apps.rocon"
       android:versionCode="1"
       android:versionName="1.0">
+      
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
@@ -11,5 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="org.ros.android.MasterChooser" />
+
+        <service android:name="org.ros.android.NodeMainExecutorService" />
     </application>
 </manifest>
