--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,8 @@
-*~
-.metadata
-.gradle
-# built application files
-*.apk
-*.ap_
-
-# files for the dex VM
-*.dex
-
-# Java class files
-*.class
-
-# generated files
-bin/
-gen/
-
-# Local configuration file (sdk path, etc)
+bin
+gen
+libs
+build.xml
 local.properties
-
-# Eclipse project files
-.classpath
-.project
-build.gradle
+project.properties
+proguard-project.txt
+.gradle
