--- a/rocon_android_robot_remoticon/AndroidManifest.xml
+++ b/rocon_android_robot_remoticon/AndroidManifest.xml
@@ -3,8 +3,17 @@
       package="org.rocon.android.apps.robot_remoticon"
       android:versionCode="1"
       android:versionName="1.0">
+
+    <uses-sdk android:minSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="RoconAndroidRobotRemoticon"
+        <activity android:name="RobotRemoticon"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
