--- a/rocon_android_robot_remoticon/package.xml
+++ b/rocon_android_robot_remoticon/package.xml
@@ -22,6 +22,7 @@
   <build_depend>rosjava_tools</build_depend>
   <build_depend>zeroconf_jmdns</build_depend>
   <build_depend>android_barcode_scanner</build_depend>
+  <build_depend>android_gingerbread</build_depend>
 
   <export>
     <android type="project"/>
