--- a/rocon_android_connector/AndroidManifest.xml
+++ b/rocon_android_connector/AndroidManifest.xml
@@ -16,7 +16,7 @@
     
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name" android:screenOrientation="portrait" android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -31,6 +31,6 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-        <activity android:name="RoconMainActivity"></activity>
+        <activity android:name="RoconMainActivity" android:screenOrientation="portrait" android:configChanges="keyboard|keyboardHidden|orientation"></activity>
     </application>
 </manifest>
