refactored for hydro.

--- a/rocon_android_robot_remoticon/Makefile
+++ b/rocon_android_robot_remoticon/Makefile
@@ -3,5 +3,5 @@ install:
 	adb -d install -r ./bin/RobotRemoticon-debug.apk
 
 uninstall:
-	adb uninstall org.rocon.android.apps.robot_remoticon
+	adb uninstall org.rocon.android.apps.hydro.robot_remoticon
 
