--- a/rocon_android_robot_remoticon/project.properties
+++ b/rocon_android_robot_remoticon/project.properties
@@ -14,3 +14,4 @@
 target=android-17
 android.library.reference.1=../rocon_android_application_management
 android.library.reference.2=../../../../android/src/android_gingerbread_extras/android_barcode_scanner
+android.library.reference.3=../../../../android/src/android_gingerbread/android_gingerbread
