--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,6 @@
  * the License.
  */
 
-include 'rocon_android_connector'
+/* include 'rocon_android_connector' */
 include 'rocon_android_application_management'
 include 'rocon_android_robot_remoticon'
