gradle 1.5->1.6, also removed some cruft.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 bin
 gen
 libs
+build
 build.xml
 local.properties
 proguard-project.txt
 .gradle
+.project
+
+# These are Android Studio files, might be worth including these later.
+.idea
+*.iml
+build.log
+build-log.xml
+docs.iml
