--- a/build.gradle
+++ b/build.gradle
@@ -23,41 +23,52 @@ allprojects {
   version = '0.1.0'
 }
 
+ext.androidBuildToolsVersion = "17"
+
 subprojects {
-  repositories {
-    mavenLocal()
-    mavenCentral()
-    /* If you have a custom maven repository for dependencies 
-      maven {
-          url 'http://robotbrains.hideho.org/nexus/content/groups/ros-public'
-      }
-    */
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:0.4.1'
+        }
+    }
+    apply plugin: 'maven'
+    repositories {
+        mavenLocal()
+        maven {
+            url 'http://robotbrains.hideho.org/nexus/content/groups/ros-public'
+        }
+    }
     configurations.add('compile') {
-      exclude group: 'junit'
-      exclude group: 'xml-apis'
+        exclude group: 'junit'
+        exclude group: 'xml-apis'
     }
 
-    task deployLibs(type: Copy) {
-      from { configurations.compile }
-      into "${projectDir}/libs"
+    /*
+       EXPERIMENTAL: Trick to get local maven installs until the plugin supports an
+       install step for aar's (coming soon).
+    */
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath
+            }
+        }
     }
-
-    task clean << {
-      ant.delete file: "${projectDir}/local.properties"
-      ant.delete file: "${projectDir}/proguard-project.txt"
-      ant.delete file: "${projectDir}/build.xml"
-      ant.delete dir: "${projectDir}/bin"
-      ant.delete dir: "${projectDir}/gen"
-      ant.delete dir: "${projectDir}/libs"
+    task install() << {
+        description = 'installs .aar files to the local maven repository.'
     }
-
-    task updateProject(type: Exec) {
-      commandLine 'android', 'update', 'project', '-p', projectDir
+    afterEvaluate { Project project ->
+        if (plugins.findPlugin('android-library')) {
+            task doDebugArchives() << {
+                project.artifacts.add("default", bundleDebug)
+            }
+            doDebugArchives.dependsOn('bundleDebug')
+            uploadArchives.dependsOn('doDebugArchives')
+            install.dependsOn('uploadArchives')
+        }
     }
-
-    task debug(type: Exec) {
-      dependsOn updateProject, deployLibs
-      commandLine 'ant', 'debug'
-    }
-  }
 }
+                                                   
