--- a/rocon_android_robot_remoticon/src/main/AndroidManifest.xml
+++ b/rocon_android_robot_remoticon/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/icon">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <provider
             android:name="org.rocon.android.apps.application_management.RobotsContentProvider"
             android:authorities="org.rocon.android.apps.application_management"
