--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(rocon_android)
 
 find_package(catkin REQUIRED rosjava_tools)
 
-catkin_android_setup()
+catkin_android_setup(assembleRelease)
 
 catkin_package()
 
