--- a/package.xml
+++ b/package.xml
@@ -14,7 +14,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rosjava_tools</build_depend>
+  <build_depend>rosjava_core</build_depend>
   <build_depend>android_core</build_depend>
   <build_depend>android_extras</build_depend>
   <build_depend>rocon_msgs</build_depend>
+  <build_depend>turtlebot_android</build_depend>
 </package>
