--- a/remocon_management/src/main/AndroidManifest.xml
+++ b/remocon_management/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.github.robotics_in_concert.rocon_android.remocon_management"
+      package="com.github.ros_java.android_remocons.remocon_management"
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
