--- a/robot_remocon/src/main/AndroidManifest.xml
+++ b/robot_remocon/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.github.robotics_in_concert.rocon_android.robot_remocon"
+      package="com.github.ros_java.android_remocons.robot_remocon"
       android:versionCode="1"
       android:versionName="1.0">
 
@@ -17,7 +17,7 @@
             android:name="com.github.ros_java.android_apps.application_management.RobotsContentProvider"
             android:authorities="com.github.ros_java.android_apps.application_management"
         />
-        <activity android:name="RobotRemocon"
+        <activity android:name=".RobotRemocon"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   >
@@ -30,7 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.github.robotics_in_concert.rocon_android.robot_remocon.RobotMasterChooser" />
+        <activity android:name="com.github.ros_java.android_remocons.robot_remocon.RobotMasterChooser" />
         <activity android:name="org.ros.android.MasterChooser" />
 
         <service android:name="AppLauncher" />
