--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rocon_android)
+project(android_remocons)
 
 find_package(catkin REQUIRED rosjava_tools)
 
