--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>rocon_android</name>
+  <name>android_remocons</name>
   <version>0.1.0</version>
   <description>
     Applications for rocon.
   </description>
-  <url type="website">http://ros.org/wiki/rocon_android</url>
-  <url type="repository">https://github.com/robotics-in-concert/rocon_android</url>
-  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_android/issues</url>
+  <url type="website">http://ros.org/wiki/android_remocons</url>
+  <url type="repository">https://github.com/ros-java/android_remocons</url>
+  <url type="bugtracker">https://github.com/ros-java/android_remocons/issues</url>
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>
   <license>Apache 2.0</license>
