--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
   <url type="repository">https://github.com/ros-java/android_remocons</url>
   <url type="bugtracker">https://github.com/ros-java/android_remocons/issues</url>
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
+  <author email="d.stonier@gmail.com">Daniel Stonier</author>
   <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>
   <license>Apache 2.0</license>
 
