ros_java -> rosjava

--- a/remocon_management/build.gradle
+++ b/remocon_management/build.gradle
@@ -17,7 +17,7 @@
 dependencies {
   compile 'ros.android_core:android_gingerbread_mr1:0.0.0-SNAPSHOT'
   compile 'ros.rosjava_core:rosjava:0.0.0-SNAPSHOT'
-  compile 'com.github.ros_java.android_apps:application_management:0.1.0'
+  compile 'com.github.rosjava.android_apps:application_management:0.1.0'
 }
 
 apply plugin: 'android-library'
