--- a/robot_remocon/build.gradle
+++ b/robot_remocon/build.gradle
@@ -26,10 +26,10 @@
 dependencies {
   /* compile project(':remocon_management') */
   compile 'ros.rosjava_core:rosjava:0.0.0-SNAPSHOT'
-  compile 'com.github.ros_java.zeroconf_jmdns_suite:jmdns:0.1.0'
+  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:0.1.0'
   compile 'ros.android_core:android_gingerbread_mr1:0.0.0-SNAPSHOT'
-  compile 'com.github.ros_java.android_extras:zxing:0.1.0'
-  compile 'com.github.ros_java.android_apps:application_management:0.1.0'
+  compile 'com.github.rosjava.android_extras:zxing:0.1.0'
+  compile 'com.github.rosjava.android_apps:application_management:0.1.0'
   compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
 }
 
