plugged and maven'd.

--- a/robot_remocon/build.gradle
+++ b/robot_remocon/build.gradle
@@ -24,11 +24,11 @@
 */
 
 dependencies {
-  compile 'ros.rosjava_core:rosjava:0.0.0-SNAPSHOT'
-  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:0.1.0'
-  compile 'ros.android_core:android_gingerbread_mr1:0.0.0-SNAPSHOT'
-  compile 'com.github.rosjava.android_extras:zxing:0.1.0'
-  compile 'com.github.rosjava.android_apps:application_management:0.1.0'
+  compile 'org.ros.rosjava_core:rosjava:0.1.+'
+  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:0.1.+'
+  compile 'org.ros.android_core:android_gingerbread_mr1:0.1.+'
+  compile 'com.github.rosjava.android_extras:zxing:0.1.+'
+  compile 'com.github.rosjava.android_apps:application_management:0.1.+'
   compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
 }
 
@@ -36,6 +36,5 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 10
-    buildToolsVersion androidBuildToolsVersion
 }
 
