--- a/package.xml
+++ b/package.xml
@@ -14,11 +14,12 @@
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rosjava_tools</build_depend>
+  <build_depend>rosjava_build_tools</build_depend>
+  <build_depend>rosjava_bootstrap</build_depend>
   <build_depend>rosjava_core</build_depend>
   <build_depend>android_core</build_depend>
   <build_depend>android_extras</build_depend>
   <build_depend>android_apps</build_depend>
   <build_depend>rocon_msgs</build_depend>
-  <build_depend>turtlebot_android</build_depend>
+  <!-- <build_depend>turtlebot_android</build_depend> -->
 </package>
