Issues #32, #2 and #4: We have NFC tags reading for the two types of tags we have so far. It works on nexus tablet and galaxy 3 phone. I didn't create a library as #4 request, but a simple activity. I will do if we need to complexify the code. Expected tag format follows the one used on QR codes, but as explained in issue #33 wireless configuration doesn't work. The format is yaml with the following parameters:  * URL (ROS master URI)  * CURL (control URI, no idea what is this used for)  * WIFI (SSID)  * WIFIENC (WIFI encoding)  * WIFIPW (WIFI password) Maybe is time to update this, following issue #33.

--- a/robot_remocon/src/main/AndroidManifest.xml
+++ b/robot_remocon/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <provider
@@ -32,6 +33,22 @@
         </activity>
         <activity android:name="com.github.rosjava.android_remocons.robot_remocon.RobotMasterChooser" />
         <activity android:name="org.ros.android.MasterChooser" />
+        <activity android:name="com.github.rosjava.android_remocons.robot_remocon.nfc.ForegroundDispatch"
+            android:label="NFC tag scan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <!-- Add a technology filter -->
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+            </intent-filter>
+
+            <meta-data android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/filter_nfc_tech"
+            />
+        </activity>
 
         <service android:name="AppLauncher" />
         <service android:name="org.ros.android.NodeMainExecutorService" >
