--- a/robot_remocon/build.gradle
+++ b/robot_remocon/build.gradle
@@ -24,11 +24,11 @@
 */
 
 dependencies {
-  compile 'org.ros.rosjava_core:rosjava:0.1.+'
-  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:0.1.+'
-  compile 'org.ros.android_core:android_gingerbread_mr1:0.1.+'
-  compile 'com.github.rosjava.android_extras:zxing:0.1.+'
-  compile 'com.github.rosjava.android_apps:application_management:0.1.+'
+  compile 'org.ros.rosjava_core:rosjava:[0.2,)'
+  compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.2,)'
+  compile 'org.ros.android_core:android_gingerbread_mr1:[0.2,)'
+  compile 'com.github.rosjava.android_extras:zxing:[0.2,)'
+  compile 'com.github.rosjava.android_apps:application_management:[0.2,)'
   compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
 }
 
