--- a/robot_remocon/build.gradle
+++ b/robot_remocon/build.gradle
@@ -26,7 +26,7 @@
 dependencies {
   compile 'org.ros.rosjava_core:rosjava:[0.2,)'
   compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.2,)'
-  compile 'org.ros.android_core:android_gingerbread_mr1:[0.2,)'
+  compile 'org.ros.android_core:android_10:[0.2,)'
   compile 'com.github.rosjava.android_extras:zxing:[0.2,)'
   compile 'com.github.rosjava.android_apps:application_management:[0.2,)'
   compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
