--- a/concert_remocon/build.gradle
+++ b/concert_remocon/build.gradle
@@ -33,7 +33,8 @@ dependencies {
   compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,0.2)'
   compile 'com.github.rosjava.android_extras:zxing:[0.1,0.2)'
   compile 'com.github.rosjava.android_apps:application_management:[0.1,0.2)'
-  compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
+  // Already included in application_management; gradle complains if doubly included
+  //  compile fileTree(dir: '../external_libraries', include:'snakeyaml*.jar')
 }
 
 apply plugin: 'android'
