Working version of NFC writer. Common stuff moved to common_tools

--- a/rocon_nfc_writer/build.gradle
+++ b/rocon_nfc_writer/build.gradle
@@ -14,22 +14,9 @@
  * the License.
  */
 
-/* 
- Examples of 
-   1) dependencies from another project in this gradle stack.
-   2,3) open ranged dependencies from a maven repository.
-   
-   It's a good idea to restrict the open ranged dependency to
-   the patch version to avoid breakages due to api changes
-   which usually occur on minor and major version numbers.
-*/
-/* 
 dependencies {
-  compile project(':local_android_library_dependency')
-  compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,)'
-  compile 'com.github.rosjava.android_extras:gingerbread:[0.1,0.2)'
+    compile project(':common_tools')
 }
-*/
 
 apply plugin: 'android'
 
