Move apps manager and app launcher to common tools. Apps manager completely remade to pair the working mechanism of other common tools. RoconConstants is now a class, so it can create an Android platform info message.

--- a/concert_remocon/src/main/AndroidManifest.xml
+++ b/concert_remocon/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="AppLauncher" />
+        <service android:name="com.github.rosjava.android_remocons.common_tools.AppLauncher" />
         <service android:name="org.ros.android.NodeMainExecutorService" >
             <intent-filter>
                 <action android:name="org.ros.android.NodeMainExecutorService" />
