--- a/rocon_nfc_writer/src/main/AndroidManifest.xml
+++ b/rocon_nfc_writer/src/main/AndroidManifest.xml
@@ -4,16 +4,14 @@
       android:versionCode="1"
       android:versionName="1.0">
 
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="18" />
+    <uses-sdk android:minSdkVersion="14"
+              android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
     <application android:label="@string/app_name"
                  android:allowBackup="true"
-                 android:icon="@drawable/ic_launcher"
-                 android:theme="@style/AppTheme" >
+                 android:icon="@drawable/ic_launcher">
         <activity android:name="RoconNfcWriter"
                   android:label="@string/app_name">
             <intent-filter>
