--- a/headless_launcher/src/main/AndroidManifest.xml
+++ b/headless_launcher/src/main/AndroidManifest.xml
@@ -26,15 +26,23 @@
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
-        <!--<activity android:name="HeadlessLauncher"-->
-                  <!--android:label="@string/app_name">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
 
-        <!--<service android:name="AppLauncher" />-->
+        <!-- Not working; asked on stackoverflow: http://stackoverflow.com/questions/20051195/can-i-use-an-activity-alias-as-the-aar-field-on-a-nfc-tag -->
+        <!--<activity-alias-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true"-->
+            <!--android:label="NFC launcher"-->
+            <!--android:name=".NFC_launcher"-->
+            <!--android:targetActivity="com.github.rosjava.android_remocons.headless_launcher.NfcLauncherActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />  &lt;!&ndash;Only for debugging; remove when done&ndash;&gt;-->
+                <!--<action android:name="android.nfc.action.NDEF_DISCOVERED" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />   &lt;!&ndash;Needed?&ndash;&gt;-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />  &lt;!&ndash;Needed?&ndash;&gt;-->
+                <!--<data android:mimeType="text/plain" />-->
+            <!--</intent-filter>-->
+        <!--</activity-alias>-->
+
         <service android:name="org.ros.android.NodeMainExecutorService" >
             <intent-filter>
                 <action android:name="org.ros.android.NodeMainExecutorService" />
