--- a/robot_remocon/build.gradle
+++ b/robot_remocon/build.gradle
@@ -24,6 +24,7 @@
 */
 
 dependencies {
+  compile project(':common_tools')
   compile 'org.ros.rosjava_core:rosjava:[0.1,)'
   compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.1,)'
   compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,)'
