Add a Nfc launcher; simplified version of the main activity in headless_launcher app

--- a/robot_remocon/src/main/AndroidManifest.xml
+++ b/robot_remocon/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.NFC" />
 
@@ -31,11 +32,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.github.rosjava.android_remocons.robot_remocon.RobotMasterChooser" />
-        <!--<activity android:name="org.ros.android.MasterChooser" />-->
+        <activity android:name=".RobotMasterChooser" />
+        <activity android:name=".NfcLauncherActivity"
+                  android:label="NFC tag launcher">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
         <activity android:name="com.github.rosjava.android_remocons.common_tools.NfcReaderActivity" />
 
-        <service android:name="AppLauncher" />
+        <!--<service android:name="AppLauncher" />-->
         <service android:name="org.ros.android.NodeMainExecutorService" >
             <intent-filter>
                 <action android:name="org.ros.android.NodeMainExecutorService" />
