avoid assembling errors from duplicate files

--- a/robot_remocon/build.gradle
+++ b/robot_remocon/build.gradle
@@ -38,5 +38,10 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 10
+    packagingOptions {
+        /* https://github.com/rosjava/android_core/issues/194 */
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
