--- a/concert_remocon/build.gradle
+++ b/concert_remocon/build.gradle
@@ -41,5 +41,10 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 14
+    packagingOptions {
+        /* https://github.com/rosjava/android_core/issues/194 */
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
