--- a/rocon_nfc_writer/build.gradle
+++ b/rocon_nfc_writer/build.gradle
@@ -22,5 +22,10 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 18
+    packagingOptions {
+        /* https://github.com/rosjava/android_core/issues/194 */
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
  
