nfc writer and common tools are compiling against rocon_rosjava.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(android_remocons)
 
 find_package(catkin REQUIRED rosjava_build_tools)
 
-#catkin_android_setup(assembleRelease)
-catkin_android_setup(tasks)
+catkin_android_setup(assembleRelease)
+#catkin_android_setup(tasks)
 
 catkin_package()
 
