--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,5 @@ allprojects {
 subprojects {
     apply plugin: 'ros-android'
 }
-                                                   
+
+defaultTasks 'assembleRelease'
