--- a/common_tools/build.gradle
+++ b/common_tools/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     compile 'com.github.rosjava.zeroconf_jmdns_suite:jmdns:[0.1,0.2)'
     compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,0.2)'
     compile 'com.github.rosjava.android_extras:zxing:[0.1,0.2)'
-    compile 'com.github.rosjava.android_apps:application_management:[0.1,0.2)'
+    /* compile 'com.github.rosjava.android_apps:application_management:[0.1,0.2)' */
+    compile 'com.github.rocon_rosjava_core:rosjava_utils:[0.1,)'
 }
 
 apply plugin: 'android-library'
