--- a/settings.gradle
+++ b/settings.gradle
@@ -16,8 +16,8 @@
 
 /* Disabled till upgraded for new rocon messages (March '14)
 include 'robot_remocon'
-include 'concert_remocon'
 include 'headless_launcher'
 */
+/*include 'rocon_remocon'*/
 include 'common_tools'
 include 'rocon_nfc_writer'
