--- a/rocon_remocon/src/main/AndroidManifest.xml
+++ b/rocon_remocon/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.github.rosjava.android_remocons.concert_remocon"
+      package="com.github.rosjava.android_remocons.rocon_remocon"
       android:versionCode="1"
       android:versionName="1.0">
 
@@ -16,15 +16,15 @@
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <provider
-            android:name=".ConcertsDatabase"
-            android:authorities="com.github.rosjava.android_remocons.concert_remocon"
+            android:name="com.github.rosjava.android_remocons.rocon_remocon.ConcertsDatabase"
+            android:authorities="com.github.rosjava.android_remocons.rocon_remocon"
         />
-        <activity android:name=".ConcertRemocon"
+        <activity android:name="com.github.rosjava.android_remocons.rocon_remocon.ConcertRemocon"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   >
             <intent-filter>
-                <action android:name="com.github.rosjava.android_remocons.concert_remocon.ConcertRemocon" />
+                <action android:name="com.github.rosjava.android_remocons.rocon_remocon.ConcertRemocon" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
@@ -32,8 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConcertChooser" />
-        <activity android:name=".NfcLauncherActivity"
+        <activity android:name="com.github.rosjava.android_remocons.rocon_remocon.ConcertChooser" />
+        <activity android:name="com.github.rosjava.android_remocons.rocon_remocon.NfcLauncherActivity"
                   android:label="NFC tag launcher">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -42,7 +42,7 @@
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
-        <activity android:name="com.github.rosjava.android_remocons.common_tools.NfcReaderActivity" />
+        <activity android:name="com.github.rosjava.android_remocons.common_tools.nfc.NfcReaderActivity" />
 
         <service android:name="org.ros.android.NodeMainExecutorService" >
             <intent-filter>
