--- a/listener/build.gradle
+++ b/listener/build.gradle
@@ -17,7 +17,8 @@
 dependencies {
   compile 'org.ros.android_core:android_gingerbread_mr1:[0.1,0.2)'
   compile 'org.ros.rosjava_core:rosjava:[0.1,0.2)'
-  compile project(':compile_tools')
+  compile 'org.ros.rosjava_messages:std_msgs:[0.5,0.6)'
+  compile project(':common_tools')
 }
 
 apply plugin: 'android'
