--- a/settings.gradle
+++ b/settings.gradle
@@ -20,5 +20,6 @@ include 'headless_launcher'
 include 'common_tools'
 include 'listener'
 include 'rocon_nfc_writer'
+include 'headless_launcher'
 include 'rocon_remocon'
 include 'talker'
