--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(android_remocons)
 
 find_package(catkin REQUIRED rosjava_build_tools)
 
-catkin_android_setup(assembleRelease)
+catkin_android_setup(assembleRelease uploadArchives)
 #catkin_android_setup(tasks)
 
 catkin_package()
