--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,8 @@
   <url type="repository">https://github.com/rosjava/android_remocons</url>
   <url type="bugtracker">https://github.com/rosjava/android_remocons/issues</url>
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
-  <author email="d.stonier@gmail.com">Daniel Stonier</author>
-  <author email="kattyokaccho3616@gmail.com">Kazuto Murase</author>
+  <author>Daniel Stonier</author>
+  <author>Kazuto Murase</author>
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -19,8 +19,7 @@
   <build_depend>rosjava_core</build_depend>
   <build_depend>android_core</build_depend>
   <build_depend>android_extras</build_depend>
-  <build_depend>rocon_msgs</build_depend>
-  <!-- While not officially released -->
   <build_depend>rocon_rosjava_core</build_depend>
+  <!-- While not officially released -->
   <build_depend>rocon_rosjava_msgs</build_depend>
 </package>
