--- a/talker/src/main/AndroidManifest.xml
+++ b/talker/src/main/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.github.rosjava.android_remocons.talker"
-android:versionCode="1"
-android:versionName="0.1">
+          package="com.github.rosjava.android_remocons.talker"
+          android:versionCode="1"
+          android:versionName="0.1"
+          xmlns:tools="http://schemas.android.com/tools">
 <uses-sdk android:minSdkVersion="10" />
 
 <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 <application android:label="@string/app_name"
-    android:icon="@drawable/ic_launcher">
+             android:icon="@drawable/ic_launcher"
+             tools:replace="icon, label">
     <activity android:name="TalkerActivity"
         android:label="@string/app_name">
         <intent-filter>
