--- a/listener/src/main/AndroidManifest.xml
+++ b/listener/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
                  android:icon="@drawable/ic_launcher"
                  tools:replace="icon, label">
         <activity android:name="Listener"
+                  android:screenOrientation="portrait"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
